--- a/access-service/src/main/resources/application.yml
+++ b/access-service/src/main/resources/application.yml
@@ -1,6 +1,38 @@
-# Access Service (8086)
 server:
   port: 8086
+
 spring:
   application:
     name: access-service
+  
+  datasource:
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/alwon_pos}
+    username: ${SPRING_DATASOURCE_USERNAME:alwon}
+    password: ${SPRING_DATASOURCE_PASSWORD:alwon2024}
+    driver-class-name: org.postgresql.Driver
+  
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        default_schema: access
+        format_sql: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+
+logging:
+  level:
+    com.alwon.pos.access: DEBUG
+
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
