--- a/camera-service/src/main/resources/application.yml
+++ b/camera-service/src/main/resources/application.yml
@@ -1,6 +1,53 @@
-# Camera Service (8085) - Mock for MVP
 server:
   port: 8085
+
 spring:
   application:
     name: camera-service
+  
+  datasource:
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/alwon_pos}
+    username: ${SPRING_DATASOURCE_USERNAME:alwon}
+    password: ${SPRING_DATASOURCE_PASSWORD:alwon2024}
+    driver-class-name: org.postgresql.Driver
+  
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        default_schema: camera
+        format_sql: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: always
+
+logging:
+  level:
+    com.alwon.pos.camera: DEBUG
+    org.springframework: INFO
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+
+# Camera configuration
+camera:
+  facial-recognition:
+    min-confidence-threshold: 85.0
+    max-processing-time-ms: 3000
+  storage:
+    base-path: /storage/evidence
+    max-file-size-mb: 10
