--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -1,16 +1,51 @@
 server:
   port: 8084
+
 spring:
   application:
     name: payment-service
+  
   datasource:
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/alwon_pos}
     username: ${SPRING_DATASOURCE_USERNAME:alwon}
     password: ${SPRING_DATASOURCE_PASSWORD:alwon2024}
+    driver-class-name: org.postgresql.Driver
+  
   jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: false
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         default_schema: payments
+        format_sql: true
+  
   rabbitmq:
     host: ${RABBITMQ_HOST:localhost}
-    port: 5672
+    port: ${RABBITMQ_PORT:5672}
+    username: ${RABBITMQ_USERNAME:alwon}
+    password: ${RABBITMQ_PASSWORD:alwon2024}
+    virtual-host: ${RABBITMQ_VHOST:alwon-vhost}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: always
+
+logging:
+  level:
+    com.alwon.pos.payment: DEBUG
+    org.springframework.amqp: INFO
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
